src/annotations/peg/api_define.pegjs
// @apiDefine name title

start
  = name:Any __ title:Title? { return { name, title } }
  / name:Any { return { name, title: null } } 

Title
  = title:.* { return title.join('') }

Any
  = head:[a-zA-Z0-9_-]+ { return head.join('') }
  / String

String
  = '"' chars:DoubleStringCharacter* '"' { return chars.join('') }
  / "'" chars:SingleStringCharacter* "'" { return chars.join('') }

DoubleStringCharacter
  = !('"' / "\\") char:. { return char}
  / "\\" sequence:EscapeSequence { return sequence}

SingleStringCharacter
  = !("'" / "\\") char:. { return char}
  / "\\" sequence:EscapeSequence { return sequence}

EscapeSequence
  = "'"
  / '"'
  / "\\"
  / "b"  { return "\b" }
  / "f"  { return "\f" }
  / "n"  { return "\n" }
  / "r"  { return "\r" }
  / "t"  { return "\t" }
  / "v"  { return "\x0B"}

_ "whitespace"
  = [ \t]*

__ "whitespace"
  = [ \t]+
